@@ -50,7 +50,7 @@ AC_HEADER_STAT
 
 AC_FUNC_MEMCMP
 AC_FUNC_VPRINTF
-AC_CHECK_FUNCS([gettext isinf lrint memmem snprintf vsnprintf gettext])
+AC_CHECK_FUNCS([gettext isinf memmem snprintf vsnprintf gettext])
 
 
 ## Optional tools for building documentation, website, extra fonts.
