@@ -1,3 +1,8 @@
+2003-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* flower/libc-extension.cc: idem.
+
+	* flower/include/libc-extension.hh: protect against isinf macros.
 
 2003-07-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
